<resources>
    <string name="app_name">SYM - Laboratory no. 2</string>
    <string name="main_title">Choose an activity</string>
    <string name="title_async">Asynchronous transmission</string>
    <string name="title_compressed">Compressed transmission</string>
    <string name="title_differate">Differate transmission</string>
    <string name="title_object">Object transmission</string>
    <string name="launch_async">Launch Async</string>
    <string name="launch_compressed">Launch Compressed</string>
    <string name="launch_differate">Launch Differate</string>
    <string name="launch_object">Launch Object</string>
    <string name="to_send">Data to send</string>
    <string name="received">Data received</string>
    <string name="send">Send</string>
    <string name="JSON">JSON</string>
    <string name="XML">XML</string>
    <string name="plain">Plain text</string>
    <string name="xml_default_fill">&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt; &lt;!DOCTYPE directory SYSTEM \"http://sym.iict.ch/directory.dtd\"&gt; &lt;directory /&gt;</string>
    <string name="plain_default_fill">I\'m some plain text and I like it !</string>
    <string name="json_default_fill">{ \"test\": \"toto\" }</string>
    <string name="first_name">First name</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="create">Create a new student</string>
    <string name="serialization">Choose the serialization type</string>
    <string name="incorrectValue">Incorrect values for the fields of the new student</string>

    <string-array name="language_array">
        <item>@string/JSON</item>
        <item>@string/XML</item>
        <item>@string/plain</item>
    </string-array>

    <string-array name="serialization_array">
        <item>@string/JSON</item>
        <item>@string/XML</item>
    </string-array>

    <string-array name="sex_array">
        <item>@string/man</item>
        <item>@string/woman</item>
    </string-array>

</resources>
